[tool.poetry]
name = "sqlalchemy-schema-factory"
version = "0.1.1"
description = "Collection of tools for building sqlalchemy schemas"
readme = "README.md"
authors = ["Smairon <man@smairon.ru>"]
packages = [{ include = "sqlalchemy_schema_factory" }]


[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^1.4.39"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
